--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.6.2",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "@supabase/supabase-js": "^2.45.0"
+
   }
 }
