--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-  "bcryptjs": "^3.0.2",
-  "cors": "^2.8.5",
-  "resend": "^6.1.0",
-  "dotenv": "^17.2.2",
-  "express": "^5.1.0",
-  "jsonwebtoken": "^9.0.2",
-  "multer": "^2.0.2"
-}
-
+    "@supabase/supabase-js": "^2.45.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
+    "resend": "^6.1.0"
+  }
 }
