--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
-    "resend": "^6.1.0"
+    "resend": "^6.1.0",
+    "nodemailer": "^6.9.14"
   }
 }
